--- a/Ejercicio1/nbproject/project.properties
+++ b/Ejercicio1/nbproject/project.properties
@@ -4,6 +4,10 @@ annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;jre=JDK 21;output=bin;
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1697545508190
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.workspace=..
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -28,11 +32,12 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ProcessTercerPrincipal.jar
+dist.jar=${dist.dir}/Ejercicio1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ProcessTercerPrincipal
+dist.jlink.output=${dist.jlink.dir}/Ejercicio1
 excludes=
+file.reference.Ejercicio1-src=src
 includes=**
 jar.compress=false
 javac.classpath=
@@ -44,8 +49,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=20
+javac.target=20
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -70,12 +75,12 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ProcessTercerPrincipal
-main.class=processtercerprincipal.ProcessTercerPrincipalExecutor
+jlink.launcher.name=Ejercicio1
+main.class=es.ejercicio1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
+mkdist.disabled=true
+platform.active=JDK_21
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -91,5 +96,4 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+src.dir=${file.reference.Ejercicio1-src}
